# aoc2019cpp

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md  vcpkg.json
days/: CMakeLists.txt
days/day01/: main.cpp
days/day02/: main.cpp
days/day03/: main.cpp
days/day_stub/: main.cpp
include/aoc2019/: intcode.hpp
src/: aoc2019.cpp  intcode.cpp
tests/: CMakeLists.txt  intcode.cpp  main.cpp
tests/.github/workflows/: build_and_test.yml
